--- a/gary2.0/src/styles/navbar.css
+++ b/gary2.0/src/styles/navbar.css
@@ -23,6 +23,29 @@
 .navbar a, .navbar button {
   font-family: 'Inter', sans-serif;
   letter-spacing: 0.03em;
+  position: relative;
+}
+
+/* Animated underline effect for nav links */
+.navbar nav a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 1px;
+  bottom: -2px;
+  left: 0;
+  background-color: #E0B016;
+  transition: width 0.3s ease;
+}
+
+.navbar nav a:hover::after {
+  width: 100%;
+}
+
+/* Active link style */
+.navbar nav a.active::after {
+  width: 100%;
+  height: 2px;
 }
 
 /* GARY A.I. logo styling */
