--- a/gary2.0/src/styles/MobileScrollFix.css
+++ b/gary2.0/src/styles/MobileScrollFix.css
@@ -25,13 +25,11 @@
   
   /* Root must fill viewport */
   #root {
-    position: fixed !important;
+    position: relative !important;
     top: 0 !important;
     left: 0 !important;
-    right: 0 !important;
-    bottom: 0 !important;
     width: 100vw !important;
-    height: 100vh !important;
+    min-height: 100vh !important;
     margin: 0 !important;
     padding: 0 !important;
     overflow-x: hidden !important;
